# Project-OOP

./: AppliedPhysics.cpp  AppliedPhysics.h  CMakeLists.txt  Calculus2.cpp  Calculus2.h  DLD.cpp  DLD.h  IMT.cpp  IMT.h  OOP.cpp  OOP.h  QMS.cpp  QMS.h  Teacher.cpp  Teacher.h  admin.cpp  admin.h  islamiat.cpp  islamiat.h  login.txt  loginAdmin.txt  main.cpp  student.cpp  student.h
Quiz/: AP.txt  Calc.txt  DLD.txt  IMT.txt  Islamiat.txt  OOP.txt
Student/: 0918student.txt  12345student.txt  studentLogin.txt
