cmake_minimum_required(VERSION 3.21)
project(Project_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(Project_1 main.cpp QMS.h QMS.cpp Student.h Student.cpp admin.cpp admin.h DLD.cpp DLD.h Calculus2.cpp Calculus2.h AppliedPhysics.h AppliedPhysics.cpp islamiat.cpp islamiat.h OOP.cpp OOP.h IMT.cpp IMT.h Teacher.cpp Teacher.h)
